blueslip: Prevent overflow of content by breaking long file paths.

--- a/web/styles/blueslip.css
+++ b/web/styles/blueslip.css
@@ -104,6 +104,7 @@
         margin-bottom: 0.5rem;
 
         .stackframe {
+            overflow-wrap: break-word;
             padding-left: calc(3.3rem - 14px);
             padding-right: 1rem;
         }
